<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/editLastName"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_margin="70dp"
        android:hint="@string/SecondName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_margin="70dp"
        android:hint="@string/FirstName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLastName" />

    <EditText
        android:id="@+id/editNumber"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_margin="70dp"
        android:hint="@string/Number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <Button
        android:id="@+id/btnData"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf= "@+id/editNumber"
        android:layout_margin="50dp"
        android:text="@string/next"
        android:textSize="30sp"/>



</androidx.constraintlayout.widget.ConstraintLayout>