<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="100dp"
        android:text="Нужна ли вам клавиатура и мышь"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <CheckBox
        android:id="@+id/keyboard"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_margin="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:text="@string/keyboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx" />

    <CheckBox
        android:id="@+id/mouse"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_margin="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mouse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyboard" />

    <Button
        android:id="@+id/btnPer"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_margin="100dp"
        android:text="@string/next"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mouse" />


</androidx.constraintlayout.widget.ConstraintLayout>